# zumi_pipeline

./: .env  .gitignore  DM_CAN.py  dm_test.py  minimal_gopro_test.py  motor_dm.py  motor_interface.py  motor_mock.py  node_gopro.py  node_motor.py  orchestrator.py  pyproject.toml  run_slam_pipeline.py  validator.py  zumi_config.py  zumi_core.py  zumi_util.py
.claude/: CLAUDE.md  CODE_PRACTICES.md
scripts/: calibrate_gripper_range.py  detect_aruco.py
scripts_slam_pipeline/: 00_process_videos.py  02_create_map.py  03_batch_slam.py  04_detect_aruco.py  05_calibrate_slam_tag.py  05_run_calibrations.py  06_generate_dataset_plan.py  07_generate_replay_buffer.py  Untitled
tests/: test_node_gopro.py  test_node_motor.py  test_orchestrator.py  test_validator.py
umi/common/: cv_util.py  timecode_util.py
