[project]
name = "zumi-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.8",
    "ipykernel>=6.29.5",
    "numpy>=1.24.4",
    "pyserial>=3.5",
    "python-dotenv>=1.0.1",
    "requests>=2.32.4",
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "pytest>=8.4.2",
    "httpx>=0.28.1",
]
